# Navagraha

./: .env.example  .replit  CHATGPT_GUIDE.md  CLAUDE.md  Dockerfile  LOCAL_SETUP.md  LOCAL_SETUP_GUIDE.md  README.md  design_guidelines.md  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  railway.json  replit.md  tailwind.config.ts  vercel.json  vitest.config.ts
.github/workflows/: main.yml
astro-engine-rs/: Cargo.toml  Dockerfile
astro-engine-rs/src/: ashtakavarga.rs  dasha.rs  main.rs  prashna.rs  remediation.rs  shadbala.rs  synastry.rs  types.rs  varga.rs  yoga.rs
attached_assets/: Pasted-You-are-a-full-stack-Flutter-Node-js-developer-Build-a-complete-Vedic-astrology-app-called-Nava-1761828821858_1761828821858.txt
client/: index.html
client/public/: firebase-messaging-sw.js
client/src/: App.tsx  index.css  main.tsx
docs/architecture/: 01_ARCHITECTURE_ANALYSIS.md  02_ARCHITECTURE_REDESIGN.md  03_DATABASE_SCHEMA.md  04_30_DAY_ROADMAP.md
scripts/: backfill-dev.ts
server/: adminAccess.ts  agoraService.ts  aiAstrologerService.ts  astroEngineClient.ts  auth.ts  db.ts  emailService.ts  geocode.ts  index.ts  jyotishAiService.ts  logger.ts  migrate.ts  paymentService.ts  prokeralaService.ts  pushService.ts  routes.ts  seed.ts  storage.ts  swagger.ts  vedicAstroService.ts  vite.ts  websocketService.ts
server/agents/: orchestrator.ts  prompts.ts
server/astroEngine/: ashtakavarga.ts  bhava.ts  core.ts  dasha.ts  dignity.ts  doshas.ts  index.ts  (+12 more)
server/engine/: Cargo.toml
server/engine/src/: lib.rs
shared/: schema.ts
tests/: setup.ts
(+86 files in other folders)
